<resources>
    <string name="app_name">Gastos</string>
    <string name="EnterPin">Enter Your Pin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elite_marke">Elite market </string>
    <string name="total_savin">Total saving </string>
    <string name="coins"> Coins </string>
    <string name="account_sta">Account status</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="terms_and_c">Terms and condition</string>
    <string name="logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="payment_ben">Payment benefits</string>
    <string name="discount_ma">Discount Margins</string>
    <string name="service_amo">service amount</string>
    <string name="account_pay">Account payment</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="coins_recei">Coins Received</string>


    <string name="what_is_ref">what is refer and earn program?</string>
    <string name="what_is_ref_ans">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\nxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="billed_amou">Billed Amount</string>

    <string name="included_mr">Included MRP\n(If any)</string>
    <string name="caf_bistro">Caf\u00C3\u00A9 Bistro</string>
    <string-array name="ques1">
        <item>sknswn nakjxn jjqnqk soqo ioqskq qnsoq qnsoq kjox o sssssssss sq qs      qs </item>

    </string-array>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>

</resources>