<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".home_fragment.UserProfilScreen">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:src="@drawable/black_long_left" />

    <RelativeLayout
        android:layout_width="286dp"
        android:layout_height="206dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="61dp"
        android:background="@drawable/rectangle2">

        <RelativeLayout
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rectangle_earnview_2"
            android:scaleType="fitXY">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name: "
                    android:textAppearance="@style/name"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65dp"
                    android:text="Xxxxxx"
                    android:textAppearance="@style/name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone No.: "
                    android:textAppearance="@style/name"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="0000000000"
                    android:textAppearance="@style/name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="110dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email: "
                    android:textAppearance="@style/name"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65dp"
                    android:text="xxxxxxxxxxxxxx"
                    android:textAppearance="@style/name" />
            </LinearLayout>
        </RelativeLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_above="@+id/bg"
            android:layout_alignBottom="@+id/bg"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="117dp"
            android:src="@drawable/woman"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="318dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:background="@drawable/rectangle2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total_savin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/total_savin"
                    android:textAppearance="@style/total_savin" />

                <TextView
                    android:id="@+id/total_savin_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_horizontal"
                    android:text="xxxx"

                    android:textAppearance="@style/xxxx" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/coins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/coins"
                    android:textAppearance="@style/total_savin" />

                <TextView
                    android:id="@+id/coins_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_horizontal"
                    android:text="xxxx"
                    android:textAppearance="@style/xxxx" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="318dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:background="@drawable/rectangle2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="fill_horizontal">

            <TextView
                android:id="@+id/account_sta_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:text="Inactive"
                android:textAppearance="@style/xxxx" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/toggle_account_activation"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="180dp"
                    android:thumb="@drawable/thumb"
                    app:showText="false"
                    app:track="@drawable/track" />



        </LinearLayout>

        <TextView
            android:id="@+id/account_sta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/account_sta"
            android:textAppearance="@style/total_savin" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="318dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:background="@drawable/rectangle2">

        <TextView
            android:id="@+id/referAndEarn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/refer_earn"
            android:textAppearance="@style/total_savin" />


    </RelativeLayout>

    <TextView
        android:id="@+id/terms_and_c"
        android:layout_width="152dp"
        android:layout_height="25dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="550dp"
        android:background="@drawable/rectangle2"
        android:text="@string/terms_and_c"
        android:textAppearance="@style/total_savin" />

    <TextView
        android:id="@+id/about_us"
        android:layout_width="152dp"
        android:layout_height="25dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="580dp"
        android:background="@drawable/rectangle2"
        android:text="@string/about_us"
        android:textAppearance="@style/total_savin" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="152dp"
        android:layout_height="25dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="620dp"
        android:background="@drawable/rectangle2"
        android:text="@string/logout"
        android:textAppearance="@style/total_savin" />


</RelativeLayout>