<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_fragment.PaymentConfirmationActivity">

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:elevation="0.01dp"
       >
        <RelativeLayout
            android:id="@+id/success"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/ellipse_55">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/tick"
            android:layout_centerInParent="true"
            />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/failure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/ellipse_56"
            android:visibility="invisible">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cross"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeVertical"
        android:layout_width="300dp"
        android:layout_height="352.08dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/vector_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/account_pay"
            android:textAppearance="@style/account_pay" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paid_amount"
                    android:textAppearance="@style/paid_amount"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="62dp"
                    android:text="Xxxxxx"
                    android:textAppearance="@style/xxxxxxx" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_time"
                    android:textAppearance="@style/paid_amount"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:text="Xxxxxx"
                    android:textAppearance="@style/xxxxxxx" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coins_recei"
                    android:textAppearance="@style/paid_amount"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:text="Xxxxxx"
                    android:textAppearance="@style/xxxxxxx" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <View
        android:id="@+id/vector"
        android:layout_width="260dp"
        android:layout_height="2dp"
        android:layout_below="@+id/relativeVertical"
        android:layout_centerHorizontal="true"
        android:elevation="0.01dp"
        android:background="@drawable/vector_line"
        android:layerType="software"
        />
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/vector_horizontal"
        android:layout_below="@+id/relativeVertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Transaction Successful"
            android:textAppearance="@style/transaction"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_refresh_24"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:background="@null"
            android:visibility="visible"/>

    </RelativeLayout>

</RelativeLayout>