<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_fragment.AccountActivationActivity">

    <RelativeLayout
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:background="@drawable/rectangle_01">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gastos"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textSize="21sp"
        android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/logo_small_"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="269dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/logo1"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:background="@drawable/rectangle126">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/payment_ben"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/payment_ben"
                android:textAppearance="@style/payment_ben"
                android:gravity="top"
                />
            <TextView
                android:id="@+id/payment_ben_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="Xxxxx"
                android:textAppearance="@style/payment_ben"
                android:gravity="top"
                />
            <View
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/line1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp">
            <TextView
                android:id="@+id/discount_ma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/discount_ma"
                android:textAppearance="@style/payment_ben"
                android:gravity="top"
                />
            <TextView
                android:id="@+id/discount_ma_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="Xxxxx"
                android:textAppearance="@style/payment_ben"
                android:gravity="top"
                />
            <View
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/line1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="230dp">
            <TextView
                android:id="@+id/coins_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/coins"
                android:textAppearance="@style/payment_ben"
                android:gravity="top"
                />
            <TextView
                android:id="@+id/coins_acc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="Xxxxx"
                android:textAppearance="@style/payment_ben"
                android:gravity="top"
                />
            <View
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/line1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="330dp">
            <TextView
                android:id="@+id/service_amo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/service_amo"
                android:textAppearance="@style/payment_ben"
                android:gravity="top"
                />
            <TextView
                android:id="@+id/service_amo_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="Xxxxx"
                android:textAppearance="@style/payment_ben"
                android:gravity="top"
                />
            <View
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/line1"
                />
        </LinearLayout>

        <Button
            android:layout_width="341dp"
            android:layout_height="47dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="460dp"
            android:background="@drawable/rectangle211"
            android:backgroundTint="@null"
            android:text="Pay"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            app:backgroundTint="#0E3746" />

    </RelativeLayout>


</RelativeLayout>